TestCases/errors/numbertoolarge.alan
2147483647
2147483646
-2147483647
this should exceed "the limit" {} {} {{}} 2147483648
